# PyDoom

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MakeProgramZip.py  MakeZip.py  README.asciidoc  README.md  TODO.adoc  TODO.txt  build_all.py  columnrender_setup.py.in  distutils_setup.py  main.py  pydoom.py  setup_exe.py  setup_extensions.py  setup_extensions_linux.py
closet/: py_console.cpp  py_console.hpp  py_cpp.cpp  py_cpp.h  py_iface.cpp  py_iface.hpp  py_interp.cpp  py_interp.h  py_renderer.cpp  py_renderer.hpp  py_wads.cpp  py_wads.hpp
columnrender_src/: CMakeLists.txt  columnrenderer.cpp
extsrc/: cutility.c  cutility.pxd  cvideo.c  cvideo.h  cvideo.pxd  video.pyx  video_cpp.cpp  video_cpp.hpp  video_cpp.pxd
gl2d_src/: gl2d_renderer.cpp
pydoom/: __init__.py  arguments.py  configuration.py  core.pyx  graphics.py  interface.pyx  resources.py  resources.pyx  utility.pyx  video.pyx  wadfile.pyx
pydoom/extensions/: __init__.py  cutility.c  cutility.h  cutility.pxd  cvideo.c  cvideo.h  cvideo.pxd  defines.h  main_handled.h  utility.pyx  video.pyx
pysrc/: __main__.py  arguments.py  graphics.py  main.py  pydoom_main.py  resources.py
pysrc/doom2/: __init__.py
pysrc/doomrlsm/: __init__.py
pysrc/pydoom/: __init__.py  arguments.py  games.py  graphics.py  launcher.py  main.py  resources.py  utility.py
resourcezip/: Games.txt
resourcezip/resources/shaders/: 2DSpace.vp  Fragment_Basic.glsl  Vertex_2DSpace.glsl
resourcezip/scripts/doom/: __init__.py
resourcezip/scripts/doom2/: __init__.py
resourcezip/scripts/doomrlsm/: __init__.py
src/: CMakeLists.txt  games.py  global.hpp  graphics.py  graphics.pyx  main.cpp  main.pxd  main.py  main.pyx  opengl.cpp  opengl.hpp  py_cpp.cpp  py_cpp.hpp  pydoom.rc  pydoom_version.py.in  resources.py  toplevel.cpp  toplevel.hpp  utility.pxd  utility.py  utilityfuncs.cpp  utilityfuncs.hpp  version.pyx  video.cpp  video.cpp.old  video.cpp.old2  video.hpp  video.hpp.old2  video.pyx  video_cpp.cpp  video_cpp.hpp  video_cpp.pxd  zipfile_custom.py
src/pydoom/: version.pyx  video.pyx
src/sdl/: SDL_error.pxd  SDL_opengl.pxd  SDL_video.pxd
